--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import-normalize; /* bring in normalize.css styles */
 
+img {
+  display: block;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
